fix: resolved hover color on dark mode for AddApplicationRow

--- a/src/modules/blockchainApplication/explore/components/BlockchainApplicationAddRow/BlockchainApplicationAddRow.css
+++ b/src/modules/blockchainApplication/explore/components/BlockchainApplicationAddRow/BlockchainApplicationAddRow.css
@@ -3,7 +3,7 @@
   cursor: pointer;
 
   &:hover {
-    background-color: var(--color-athens-white);
+    background-color: var(--color-application-manage-hover-color);
     border-radius: 10px;
   }
 
@@ -14,6 +14,7 @@
   & > div:first-of-type {
     padding: 8px 16px;
     height: 52px;
+    background: none !important;
   }
 
   & .chainName {
